packages/typ/tests/fixtures/diagnostics/0887_gadt_witness_annotation_mismatch_03.ml
type _ witness_gamma =
  | WInt_gamma : int witness_gamma
  | WBool_gamma : bool witness_gamma

let _ : bool witness_gamma = WInt_gamma
